gitops/platform-apps/backup-s3/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backup-s3
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
