gitops/platform-apps/backup-s3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backup-s3
  namespace: backup-s3
spec:
  ports:
    - name: https
      port: 8443
      protocol: TCP
      targetPort: 8443
  type: ClusterIP
