gitops/platform-apps/backup-s3/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: backup-s3
  namespace: backup-s3
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`backup-s3.__ZONE_NAME__`)
      middlewares:
        - name: authentik-forwardauth
          namespace: longhorn-system
      services:
        - kind: Service
          name: backup-s3
          port: 8443
          scheme: https
          serversTransport: backup-s3-server-transport
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: backup-s3-netbird
  namespace: backup-s3
spec:
  entryPoints:
    - webnetbird
  routes:
    - kind: Rule
      match: Host(`backup-s3.__ZONE_NAME__`)
      middlewares:
        - name: authentik-forwardauth
          namespace: longhorn-system
      services:
        - kind: Service
          name: backup-s3
          port: 8443
          scheme: https
          serversTransport: backup-s3-server-transport
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: backup-s3-authentik-callback
  namespace: backup-s3
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`backup-s3.__ZONE_NAME__`) && PathPrefix(`/outpost.goauthentik.io`)
      services:
        - kind: Service
          name: authentik-server
          namespace: authentik
          port: 80
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: backup-s3-authentik-callback-netbird
  namespace: backup-s3
spec:
  entryPoints:
    - webnetbird
  routes:
    - kind: Rule
      match: Host(`backup-s3.__ZONE_NAME__`) && PathPrefix(`/outpost.goauthentik.io`)
      services:
        - kind: Service
          name: authentik-server
          namespace: authentik
          port: 80
